fix right white space on mobile

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,6 +17,7 @@ body {
   font-size: $content-font-size;
   min-height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 #main > div:not(.header) {
